# mtpdrive

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  README.md  THIRD_PARTY_NOTICES.md  flake.nix  package.nix  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
crates/mtpdrive-app/: Cargo.toml  Info.plist.in
crates/mtpdrive-app/resources/en.lproj/: InfoPlist.strings
crates/mtpdrive-app/resources/zh-Hans.lproj/: InfoPlist.strings
crates/mtpdrive-app/src/: application.rs  instance.rs  lib.rs  login_item.rs  main.rs  service.rs  theme.rs  tray.rs  tray_template.rs  updater.rs
crates/mtpdrive-app/src/views/: devices.rs  logs.rs  mod.rs  settings.rs
crates/mtpdrive-app/tests/unit/: application.rs  instance.rs  login_item.rs  theme.rs  tray.rs  tray_template.rs  updater.rs
crates/mtpdrive-cli/: Cargo.toml
crates/mtpdrive-cli/src/: args.rs  commands.rs  lib.rs  main.rs  output.rs
crates/mtpdrive-cli/tests/: help.rs
crates/mtpdrive-cli/tests/unit/: args.rs  output.rs
crates/mtpdrive-core/: Cargo.toml
crates/mtpdrive-core/src/: daemon.rs  device.rs  format.rs  i18n.rs  ipc.rs  lib.rs  logs.rs  model.rs  mount.rs  nfs.rs  paths.rs  settings.rs  staging.rs
crates/mtpdrive-core/tests/: client.rs  formatting.rs
crates/mtpdrive-core/tests/unit/: device.rs  i18n.rs  logs.rs  model.rs  mount.rs  nfs.rs  settings.rs  staging.rs
scripts/: macos-linker.sh
xtask/: Cargo.toml
xtask/src/: main.rs
