[package]
name = "mtpdrive-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "mtpdrive-app"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
directories.workspace = true
iced.workspace = true
image.workspace = true
material-ui-rs.workspace = true
mtpdrive-core = { path = "../mtpdrive-core" }
serde_json.workspace = true
semver.workspace = true
time.workspace = true
tokio.workspace = true
tray-icon.workspace = true

[lints]
workspace = true
