[package]
name = "mtpdrive-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "mtpdrive"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
mtpdrive-core = { path = "../mtpdrive-core" }
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
